--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
   margin-top: 20px;
   max-width: 400px;
   height: 30px;
-  width: 100%;
+  width: 200px;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
